# frasier

./: 5s_Snapshot.ipynb  PDE.R  PDE.ipynb  PDE_new.ipynb  SITH.ipynb  TI-94.ipynb  TI-95.ipynb  frasier_1.0.ipynb  frasier_1.ipynb  objects.py  pyproject.toml  readme.md
future_code/: objects.py
