[tool.poetry]
name = "frasier"
version = "0.1.0"
description = "Future Reinforcement Anticipator with Scale Invariant Emulated Recall"
authors = ["Bao Le <bple@sjc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
torch = "^1.12.1"
pandas = "^1.4.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterthemes = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
